--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 45vh;
-  margin-bottom: 20vw;
+  margin-bottom: 20vh;
 }
 header {
   width: 100%;
