--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-body {
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
   max-height: 100%;
 }
 :root {
   --border-color: #D7DBE3;
   font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif;
-  --green: #0CD977;
+  --green: #d9a90c;
   --red: #FF1C1C;
   --pink: #FF93DE;
   --purple: #5767ED;
@@ -20,22 +22,24 @@ body {
   margin-bottom: 20vh;
 }
 header {
-  width: 100%;
+  width: 99%;
   height: 20%;
-  background-color: #00ff84ce;
+  background-color: #d9a90cb0;
   border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10%;
+  margin-bottom: 10vh;
+  border: 2px solid rgb(184, 184, 184);
 }
 .head p{
   font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 200%;
 }
 .modal {
   width: 30rem;
   margin: 0 auto;
-  border: 1px solid var(--border-color);
+  border: 2px solid var(--border-color);
   box-shadow: 0 1px 2px rgba(0,0,0,0.16);
   background-color: #fff;
   border-radius: 0.25rem;
