--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
+  max-height: 100%;
   max-width: 100%;
   overflow-x: hidden;
-  max-height: 100%;
 }
 :root {
   --border-color: #D7DBE3;
@@ -13,13 +13,14 @@ html, body {
   --yellow: #FFC61C;
   --rotation: 0deg;
   }
-
+.info {
+  word-wrap: break-word;
+}
 .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 45vh;
-  margin-bottom: 20vh;
+  padding-bottom: 5%;
 }
 header {
   width: 99%;
@@ -37,7 +38,7 @@ header {
   font-size: 200%;
 }
 .modal {
-  width: 30rem;
+  width: 80%;
   margin: 0 auto;
   border: 2px solid var(--border-color);
   box-shadow: 0 1px 2px rgba(0,0,0,0.16);
@@ -52,12 +53,15 @@ header {
   text-align: center;
   font-size: 5rem;
   line-height: 5rem;
+  word-wrap: break-word;
 }
 
 h1 {
   text-align: center;
 }
-
+.head {
+  word-wrap: break-word;
+}
 p {
   padding: 0 4rem; 
   line-height: 1.5rem;
